testfx/errors/error_tests/edge_39_operator_spam.fx
// 运算符乱用
x := 10
y := x +++ 5
z := x --- 3
a := x ** y
b := x // 2
c := x % % 3
d := x && && y
e := x || || y
f := !!!x
g := x <=> y
h := x >>= y
